# cpp-example

./: .gitignore  README.md
QtRpa/: CMakeLists.txt  CMakeSettings.json  test.py
QtRpa/assets/Assets/: keyboard.xml  system.xml  workflow.xml
QtRpa/assets/activities/: additional.xml
QtRpa/assets/languages/: en-US.json
QtRpa/assets/setting/: columns.xml  modules.xml
QtRpa/assets/template/: index.xml
QtRpa/include/: common.hpp  creator.hpp  events.hpp  frameless.hpp  interpreter.hpp  model.hpp  property.hpp  resource.h  scintilla3.hpp  v8.hpp  wizard.hpp
QtRpa/include/common/: algorithm.h  alias.h  code.h  common_widget.h  const_string.h  convert.h  custom_output_backend.h  directoryentry.h  directoryiterator.h  elementparser.h  environment.h  file.h  format.h  framework.h  image.h  iterator_traits.h  kernel.h  logs.h  mimedata.h  object.h  path.h  point.h  rect.h  runnable.h  serialization.h  stream.h  string.h  variable.h  wobjectdefs.h  worker_thread.h  xmlattribute.h  xmldocument.h  xmlnode.h  xmlnodeiterator.h  zip_entry.h
QtRpa/include/creator/: about_window.h  application.h  command_event_about.h  command_event_exec.h  command_event_new.h  command_event_open.h  command_event_save.h  component.h  dump_dialog.h  gui_application.h  items_callback.h  mini_dump.h  scene.h
QtRpa/include/events/: activity_create_event.h  activity_select_event.h  adjustsizeevent.h  closeevent.h  common_event.h  createevent.h  file_browser_event.h  gitcloneevent.h  message_output_event.h  openevent.h  script_status_listener.h  showevent.h
QtRpa/include/frameless/: delegatewindow.h  framelesswindow.h  mainwindow.h  standardbutton.h  titlebarwidget.h
QtRpa/include/graphics/: code.xxxx  filedeleteitem.xxx  processstartitem.xxxx  sequenceitem.h
QtRpa/include/interpreter/: arrowitem.h  component.h  composite_property.h  consoleapplication.h  containeritem.h  dropareaitem.h  element.h  elementmimedata.h  framework.h  keyboard.h  mouse.h  mybase.h  placeholderitem.h  process.xx  property.h  propparser.h  pyabstracteditorfactory.h  pyactivityproperty.h  pycontainer.h  pyelement.h  pyitem.h  pylayout.h  pylayoutitem.h  pylexerpython.h  pylinearlayout.h  pylineeditfactory.h  pymodule.h  pypropertybrowser.h  pypropertysheet.h  pypushbutton.h  pyscintilla.h  pystderroutstreamredirect.h  pystring.h  pystringpropertymanager.h  pywidget.h  pyxmlattribute.h  pyxmldocument.h  pyxmlnode.h  scriptparser.h  simpletextitem.h  (+5 more)
QtRpa/include/interpreter2/: consoleapplication.h  error.h  http_session.h  inspector.h  inspector_agent.h  inspector_channel.h  inspector_client.h  native_library.h  tcp_server.h  timer_resource.h  v8_util.h  websocket_listener.h  websocket_session.h
QtRpa/include/model/: activities_dom_item.h  activities_search_model.h  activitiesmanager.h  variable_model.h  xmlmimedata.h
QtRpa/include/opencv/: core_implement.h  core_p.h  core_wrapper.h  imgcodecs_implement.h  imgcodecs_p.h  imgcodecs_wrapper.h  imgproc_implement.h  imgproc_p.h  imgproc_wrapper.h  initialize.h  mat_implement.h  mat_p.h  mat_wrapper.h  qrcodedetector_implement.h  qrcodedetector_p.h  qrcodedetector_wrapper.h  scalar_implement.h  scalar_p.h  scalar_wrapper.h
QtRpa/include/properties2/: code.xxx  filedelete.xxx  helper.xxx  network_send.xxx  network_udp_client.xxx  network_udp_server.xxx  print.xxxx  processstart.xxxx  sequence.h  workflow_assign.xxx  workflow_while.xxx
QtRpa/include/property/: abstracteditorfactory.h  abstracteditorfactorybase.h  abstractpropertybrowser.h  abstractpropertymanager.h  booledit.h  boolpropertymanager.h1  browseritem.h  buttonpropertybrowser.h  charpropertymanager.h1  colorpropertymanager.h1  cursordatabase.h  cursorpropertymanager.h1  datepropertymanager.h1  datetimepropertymanager.h1  doublepropertymanager.h1  enumpropertymanager.h1  flagpropertymanager.h1  fontpropertymanager.h1  framework.h  groupboxpropertybrowser.h  grouppropertymanager.h  intpropertymanager.h1  keysequencepropertymanager.h1  lineeditfactory.h  localepropertymanager.h1  pointpropertymanager.h1  propertybrowser.h  propertyeditordelegate.h  propertyeditorview.h  propertysheet.h  qteditorfactory.h1  qtpropertybrowser.h  rectpropertymanager.h1  sizepolicypropertymanager.h1  sizepropertymanager.h1  stringpropertymanager.h  timepropertymanager.h1  utils.h
QtRpa/include/scintilla2/: page.h  scintilla_api_wrapper.h  scintilla_component.h  scintilla_module_manager.h
QtRpa/include/wizard/: createpage.h  framework.h  gitpage.h  recent_component.h  splash_content.h  splash_guide.h  started_component.h  wizardpage.h  wizardwidget.h
QtRpa/modules/common/: CMakeLists.txt
QtRpa/modules/creator/: CMakeLists.txt
QtRpa/modules/events/: CMakeLists.txt
QtRpa/modules/frameless/: CMakeLists.txt
QtRpa/modules/graphics/: CMakeLists.txt
QtRpa/modules/interpreter/: CMakeLists.txt
QtRpa/modules/interpreter2/: CMakeLists.txt
QtRpa/msi/: setup.nsi
QtRpa/scripts/: README.md  export.py  implement.js  install.py  main.js  mk_hpp.py  mkclass.py  module.py  vcpkgs.py
chrome_inspector/: CMakeLists.txt  CMakeSettings.json  README.md
chrome_inspector/example/: main.js
chrome_inspector/include/: error.h  http_session.h  inspector_agent.h  inspector_channel.h  inspector_client.h  logs.h  native_library.h  options_manager.h  tcp_server.h  timer_resource.h  v8_util.h  websocket_listener.h  websocket_session.h  worker.h
chrome_inspector/src/: error.cpp  global.cpp  http_session.cpp  inspector_agent.cpp  inspector_channel.cpp  inspector_client.cpp  logs.cpp  main.cc  native_library.cpp  options_manager.cpp  plugin_load.cpp  tcp_server.cpp  timer_resource.cpp  websocket_listener.cpp  websocket_session.cpp  worker.cpp
chrome_inspector/tools/: decode.js  private.js  wrapper.js
framless_window/: CMakeLists.txt  CMakeSettings.json  README.md
framless_window/include/: delegatewindow.h  flags.h  framelesswindow.h  standardbutton.h  titlebarwidget.h
framless_window/src/: custom_output_backend.cpp  delegatewindow.cpp  framelesswindow.cpp  logs.cpp  mainwindow.cpp  object.cpp  standardbutton.cpp  titlebarwidget.cpp
(+974 files in other folders)
